[gd_scene load_steps=14 format=2]

[ext_resource path="res://Sprites/Fireball/ball 3.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Fireball/ball 8.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Fireball/ball 6.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Fireball/ball 2.png" type="Texture" id=4]
[ext_resource path="res://Fireball.gd" type="Script" id=5]
[ext_resource path="res://Sprites/Fireball/ball 4.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Fireball/ball 5.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Fireball/ball.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Fireball/ball 7.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Fireball/explode 1.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Fireball/explode 2.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 9 ), ExtResource( 2 ) ],
"loop": true,
"name": "shoot",
"speed": 25.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "explode",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 44.0

[node name="Fireball" type="Area2D"]
scale = Vector2( 0.3, 0.3 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 1 )
animation = "explode"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="area_shape_entered" from="." to="." method="_on_Fireball_area_shape_entered"]
[connection signal="body_entered" from="." to="." method="_on_Fireball_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
